# sdn-fixtures

./: .gitignore  .mypy-check-paths  .pre-commit-config.yaml  Makefile  README.md  README.rst  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.lekplats.txt  requirements.txt  setup.cfg
examples/: 001-dummy.dot  002-veth-bridge.dot  003-veth-netns.dot  004-veth-netns-vrf.dot  005-veth-netns-vrf-vxlan.dot
pyroutex/: main.py
sdn_fixtures/: fixtures.py  main.py
tests/test_core/: conftest.py  test_basic.py
