[metadata]
name = pyroutex
version = file: VERSION
description = Declarative SDN config
long_description = file: README.rst
author = Peter Saveliev
author_email = peter@svinota.eu
long_description_content_type = text/x-rst
url = https://github.com/svinota/pyroutex
license = Apache-2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Networking
    Topic :: System :: Systems Administration
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Development Status :: 4 - Beta

[options]
packages_dir =
    =pyroutex
packages = find:

[options.entry_points]
console_scripts =
    pyroute2-dot = pyroutex.main:run
